generator client {
  provider = "prisma-client-js"
}
generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model User {
  id               Int        @id @default(autoincrement())
  name             String
  company          String
  email            String     @unique
  password         String?
  address          String?
  telephone        String?
  role             String     @default("customer")
  posts            Post[]
  employees        Employee[]
  rooms            Room[]     @relation("UserRooms")
  sentMessages     Message[]  @relation("SentMessages")
  receivedMessages Message[]  @relation("ReceivedMessages")
  createdAt        DateTime   @default(now())
  updatedAt        DateTime   @updatedAt
  resetTokens      PasswordResetToken[]
  reports          Report[]
}

model Post {
  id        Int      @id @default(autoincrement())
  picture   String?
  title     String
  author    User     @relation(fields: [authorId], references: [id])
  authorId  Int
  content   String?  @db.Text
  category  String?
  status    String   @default("Published")
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Employee {
  employeeCode  String
  companyId     Int
  cardCode      String
  title         String?
  firstName     String
  lastName      String
  gender        String?
  department    String?
  position      String?
  startDate     String?
  endDate       String?
  citizenId     String?
  year          Int
  currentSalary Float?
  age           Int?
  birthDate     String?
  user          User      @relation(fields: [companyId], references: [id])
  incomes       Income[]
  expenses      Expense[]
  taxes         Tax[]

  @@id([employeeCode, companyId, year]) // Composite primary key
}

model Income {
  id             Int      @id @default(autoincrement())
  employeeCode   String
  companyId      Int
  month          Int? 
  year           Int
  salary         Float? 
  shiftAllowance Float? 
  foodAllowance  Float? 
  overtime       Float? 
  diligence      Float? 
  beverage       Float? 
  commission     Float? 
  brokerFee      Float? 
  otherIncome    Float? 
  bonus          Float? 
  employee       Employee @relation(fields: [employeeCode, companyId, year], references: [employeeCode, companyId, year])

  @@index([employeeCode, companyId, year, month]) // Optional: Add an index for faster queries
}

model Expense {
  id                  Int      @id @default(autoincrement())
  employeeCode        String
  companyId           Int
  loan                Float?
  salaryAdvance       Float?
  commissionDeduction Float?
  otherDeductions     Float?
  month               Int? 
  year                Int
  employee            Employee @relation(fields: [employeeCode, companyId, year], references: [employeeCode, companyId, year])

  @@index([employeeCode, companyId, year, month]) // Optional: Add an index for faster queries
}

model Tax {
  id                     Int      @id @default(autoincrement())
  employeeCode           String
  companyId              Int
  employeeTax            Float?
  companyTax             Float?
  socialSecurityEmployee Float?
  socialSecurityCompany  Float?
  providentFund          Float?
  month                  Int? 
  year                   Int
  employee               Employee @relation(fields: [employeeCode, companyId, year], references: [employeeCode, companyId, year])

  @@index([employeeCode, companyId, year, month]) // Optional: Add an index for faster queries
}

model Appointment {
  id        Int      @id @default(autoincrement())
  name      String
  company   String
  email     String
  telephone String
  startTime String
  endTime   String
  note      String?
  date      DateTime
  status    String   @default("pending")
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Report {
  id             Int      @id @default(autoincrement())
  userId         Int
  name           String
  company        String
  email          String
  category       String
  description    String
  problem_report String?
  status         String   @default("pending")
  createdAt      DateTime @default(now())
  images         String?    @db.Text
  user           User     @relation(fields: [userId], references: [id])
}

model Room {
  id         Int      @id @default(autoincrement())
  customerId Int      @unique
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  customer User      @relation("UserRooms", fields: [customerId], references: [id])
  messages Message[]
}

model Message {
  id        Int      @id @default(autoincrement())
  content   String
  timestamp DateTime @default(now())
  senderId   Int
  receiverId Int
  roomId     Int
  isRead     Boolean  @default(false)
  sender   User @relation("SentMessages", fields: [senderId], references: [id])
  receiver User @relation("ReceivedMessages", fields: [receiverId], references: [id])
  room     Room @relation(fields: [roomId], references: [id]) 
}

model PasswordResetToken {
  id        Int       @id @default(autoincrement())
  token     String    @unique
  userId    Int
  user      User      @relation(fields: [userId], references: [id])
  expiresAt DateTime
  used      Boolean   @default(false)
  createdAt DateTime  @default(now())

  @@index([token])
  @@index([userId])
}
